[package]
name = "mdbook-rolltables"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.11"
pico-args = "0.4.2"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.2"
semver = "1.0.4"
serde_json = "1.0.66"
toml = "0.5.8"
