[package]
name = "mdbook-rolltables"
version = "0.2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
mdbook = {version = "0.4.11", default-features = false }
pico-args = {version = "0.4.2", default-features = false}
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.2"
semver = "1.0.4"
serde_json = "1.0.66"
toml = "0.5.8"
